--- a/app/src/main/res/layout/activity_welcome.xml
+++ b/app/src/main/res/layout/activity_welcome.xml
@@ -1,6 +1,7 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
+    android:id="@+id/activity_welcome_container"
     android:background="@drawable/welcome_backgroundt"
     android:layout_height="match_parent">
 
@@ -17,6 +18,6 @@
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
         android:layout_marginBottom="40dp"
-        android:layout_centerHorizontal="true"/>
+    android:layout_centerHorizontal="true"/>
 
 </RelativeLayout>
