--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -5,7 +5,7 @@
         <item name="android:actionBarStyle">@style/MyActionBar</item>
     </style>
 
-    <style name="WelcomeTheme" parent="android:Theme.Holo.Light.NoActionBar.Fullscreen">
+    <style name="WelcomeTheme" parent="android:Theme.Translucent.NoTitleBar.Fullscreen">
 
     </style>
 
